--- a/donut/index.html
+++ b/donut/index.html
@@ -5,9 +5,20 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
-    <div id="app"></div>
+    <pre class="title">
+
+ _____                         
+ (____ \                   _    
+  _   \ \ ___  ____  _   _| |_  
+ | |   | / _ \|  _ \| | | |  _) 
+ | |__/ / |_| | | | | |_| | |__ 
+ |_____/ \___/|_| |_|\____|\___)
+                                
+ 
+    </pre>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
